# deltalake-redis-lock

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/lint-test-build-scan/: action.yaml
.github/workflows/: merge.yaml  pr.yaml
src/: delta_lock.py  delta_rs.py  deltalake_redis_lock.py  global_lock.py  redis_lock_object_store.py
test_table/: 0-071bbc5b-4a67-4ce4-bfac-238da0d0c69b-0.parquet
tests/: conftest.py  pytest.ini
tests/integration/: test_lock.py  test_no_lock.py
tests/unit/: .coveragerc
tests/unit/src/: test_deltalake_redis_lock.py
tools/docker/: Dockerfile
