[tool.poetry]
name = "deltalake-redis-lock"
version = "0.0.1-alpha.7"
description = "deltalake-redis-lock"
authors = ["Simon Thelin"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/wrapbytes/deltalake-redis-lock"
repository = "https://github.com/wrapbytes/deltalake-redis-lock"
packages = [
    { include = "**/*.*", from="src"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
deltalake = "^0.10.0"
redis = "^4.6.0"
pyarrow = "^12.0.1"
pandas= "2.0.3"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.3"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-env = "^0.8.2"
